@@ -18,11 +18,12 @@ around new_object => sub {
 
     my %attrs = (
         __INSTANCE__ => 1,
+        __no_BUILD__ => 1,
         (
             map { $_ => 1 }
             grep {defined}
             map  { $_->init_arg() } $self->get_all_attributes()
-        )
+        ),
     );
 
     my @bad = sort grep { !$attrs{$_} } keys %$params;
@@ -44,9 +45,12 @@ around _inline_BUILDALL => sub {
 
     my @attrs = (
         '__INSTANCE__ => 1,',
-        map      { B::perlstring($_) . ' => 1,' }
+        '__no_BUILD__ => 1,',
+        (
+            map  { B::perlstring($_) . ' => 1,' }
             grep {defined}
             map  { $_->init_arg() } $self->get_all_attributes()
+        ),
     );
 
     return (
@@ -70,6 +74,7 @@ around _eval_environment => sub {
         map  { $_->init_arg() } $self->get_all_attributes();
 
     $attrs{__INSTANCE__} = 1;
+    $attrs{__no_BUILD__} = 1;
 
     $env->{'%allowed_attrs'} = \%attrs;
 
