@@ -2,6 +2,11 @@
 
 - Repository has moved to the GitHub Moose organization
 
+- Added support for __no_BUILD__ as a constructor argument to skip calling any
+  BUILD subs (used internally by modules like Moo that have their own
+  implementation of calling BUILD). Reported and patched by Karen Etheridge
+  (RT#120124, GH #1).
+
 
 0.19     2012-01-17
 
